[chore] : GC 로그를 수집하기 위해 Java 실행 옵션을 entrypoint.sh 에 추가 (#34)